falta probar en postman users y hacer test de users

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,8 +2,8 @@ server.error.include-message=always
 server.port=3000
 spring.datasource.url=jdbc:h2:mem:default;DB_CLOSE_ON_EXIT=FALSE
 spring.datasource.username=sa
-http=//localhost:{server.port}/h2-console
-spring.h2.console.enabled=true
+##http=//localhost:{server.port}/h2-console
+##spring.h2.console.enabled=true
 spring.jpa.show-sql=true
 spring.jpa.open-in-view=true
 spring.jpa.defer-datasource-initialization=true
@@ -30,3 +30,11 @@ spring.thymeleaf.enabled=true
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
 spring.data.mongodb.authentication-database=admin
+## SSL
+server.ssl.key-store-type=PKCS12
+server.ssl.key-store=classpath:cert/server_keystore.p12
+server.ssl.key-store-password=1234567
+server.ssl.key-alias=serverKeyPair
+server.ssl.enabled=true
+jwt.secret=1234567
+jwt.expiration=86400000
