--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,18 +13,14 @@ spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.datasource.password=root
 spring.datasource.driver-class-name=org.h2.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
+## ALMACENAMIENTO DE FICHEROS
 upload.root-location=storage-dir
 upload.delete=false
+## FICHEROS
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
 spring.mvc.contentnegotiation.favor-parameter=true
 spring.mvc.contentnegotiation.parameter-name=format
-# MONGO
-spring.data.mongodb.host=localhost
-spring.data.mongodb.port=27017
-spring.data.mongodb.database=pedidos
-spring.data.mongodb.username=root
-spring.data.mongodb.password=example
 ## THYMELEAF
 spring.thymeleaf.enabled=true
 spring.thymeleaf.prefix=classpath:/templates/
@@ -38,3 +34,5 @@ server.ssl.key-alias=serverKeyPair
 server.ssl.enabled=true
 jwt.secret=1234567
 jwt.expiration=86400000
+## PERFIL ACTIVO
+spring.profiles.active=dev
