--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,8 +1,13 @@
+spring.jpa.show-sql=true
+spring.jpa.open-in-view=true
+spring.jpa.defer-datasource-initialization=true
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.sql.init.mode=always
 ##HABILITAR SWAGGER
-springdoc.swagger-ui.enabled=true
+springdoc.swagger-ui.enabled=false
 # MONGO
-spring.data.mongodb.host=localhost
-spring.data.mongodb.port=27017
-spring.data.mongodb.database=pedidos
-spring.data.mongodb.username=root
-spring.data.mongodb.password=example
+spring.data.mongodb.host=${MONGO_HOST:localhost}
+spring.data.mongodb.port=${MONGO_PORT:27017}
+spring.data.mongodb.database=${MONGO_DB:funkos}
+spring.data.mongodb.username=${DATABASE_USER:admin}
+spring.data.mongodb.password=${DATABASE_PASSWORD:admin1234}
