--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,10 +1,17 @@
+spring.datasource.url=jdbc:h2:mem:default;DB_CLOSE_ON_EXIT=FALSE
+spring.datasource.username=${DATABASE_USER:sa}
+spring.datasource.password=${DATABASE_PASSWORD:root}
+spring.jpa.defer-datasource-initialization=false
+spring.jpa.hibernate.ddl-auto=update
+spring.sql.init.mode=never
+spring.jpa.open-in-view=false
 # MONGO
-spring.data.mongodb.host=localhost
-spring.data.mongodb.port=27017
-spring.data.mongodb.database=pedidos
-spring.data.mongodb.username=root
-spring.data.mongodb.password=example
+spring.data.mongodb.host=${MONGO_HOST:localhost}
+spring.data.mongodb.port=${MONGO_PORT:27017}
+spring.data.mongodb.database=${MONGO_DB:funkos}
+spring.data.mongodb.username=${DATABASE_USER:admin}
+spring.data.mongodb.password=${DATABASE_PASSWORD:admin1234}
 ## SWAGGER
-springdoc.swagger-ui.enabled=false
+springdoc.swagger-ui.enabled=true
 ## ALMACENAMIENTO DE FICHEROS
 upload.delete=false
