--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,7 @@ server.error.include-message=always
 server.port=3000
 spring.datasource.url=jdbc:h2:mem:default;DB_CLOSE_ON_EXIT=FALSE
 spring.datasource.username=sa
+spring.datasource.password=root
 ##http=//localhost:{server.port}/h2-console
 ##spring.h2.console.enabled=true
 spring.jpa.show-sql=true
@@ -10,7 +11,6 @@ spring.jpa.defer-datasource-initialization=true
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.sql.init.mode=always
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.datasource.password=root
 spring.datasource.driver-class-name=org.h2.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
 ## ALMACENAMIENTO DE FICHEROS
@@ -35,4 +35,4 @@ server.ssl.enabled=true
 jwt.secret=1234567
 jwt.expiration=86400000
 ## PERFIL ACTIVO
-spring.profiles.active=dev
+spring.profiles.active=${PERFIL:dev}
