--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,7 +1,23 @@
-version: '3.1'
-
 services:
 
+  # PostgresSQL
+  postgres-db:
+    container_name: funkos-db_postgres
+    image: postgres:12-alpine
+    restart: always
+    env_file: .env
+    environment:
+      POSTGRES_USER: ${DATABASE_USER}
+      POSTGRES_PASSWORD: ${DATABASE_PASSWORD}
+      POSTGRES_DB: ${POSTGRES_DATABASE}
+    ports:
+      - ${POSTGRES_PORT}:5432
+    volumes:
+      - ./database/init.sql:/docker-entrypoint-initdb.d/init.sql
+    networks:
+      - funkos-network
+
+  # MongoDB
   mongo-db:
     container_name: funkos-db_mongo
     image: mongo:5.0
@@ -18,27 +34,27 @@ services:
     networks:
       - funkos-network
 
-  funkos-api-rest:
+  # Servicio de la API REST
+  funkos-tienda-api:
     build:
       context: .
       dockerfile: Dockerfile
-    container_name: funkos-api-rest
+    container_name: funkos-tienda-api
     restart: always
     env_file: .env
     ports:
       - ${API_PORT}:3000
     volumes:
-      - storage-dir:/storage-dir
+      - storage-dir:/app/storage-dir
     networks:
       - funkos-network
     depends_on:
-      - h2-db
+      - postgres-db
       - mongo-db
 
-
 volumes:
-    storage-dir:
+  storage-dir:
 
 networks:
-     funkos-network:
-       driver: bridge
+  funkos-network:
+    driver: bridge
