--- a/.env
+++ b/.env
@@ -1,9 +1,9 @@
 API_PORT=3000
 DATABASE_USER=admin
 DATABASE_PASSWORD=admin1234
-H2_HOST=h2-db
-H2_PORT=5432
-H2_DATABASE=funkos
+POSTGRES_HOST=postgres-db
+POSTGRES_PORT=5432
+POSTGRES_DATABASE=funkos
 MONGO_HOST=mongo-db
 MONGO_PORT=27017
 MONGO_DATABASE=funkos
