--- a/docker-compose-db.yaml
+++ b/docker-compose-db.yaml
@@ -1,5 +1,22 @@
 services:
 
+  postgres-db:
+    container_name: funkos-db_postgres
+    image: postgres:12-alpine
+    restart: always
+    env_file: .env
+    environment:
+      POSTGRES_USER: ${DATABASE_USER}
+      POSTGRES_PASSWORD: ${DATABASE_PASSWORD}
+      POSTGRES_DB: ${POSTGRES_DATABASE}
+    ports:
+      - ${POSTGRES_PORT}:5432
+    volumes:
+      - ./database/init.sql:/docker-entrypoint-initdb.d/init.sql
+    networks:
+      - funkos-network
+
+
   mongo-db:
     container_name: funkos-db_mongo
     image: mongo:5.0
@@ -16,22 +33,6 @@ services:
     networks:
       - funkos-network
 
-  funkos-api-rest:
-    build:
-      context: .
-      dockerfile: Dockerfile
-    container_name: funkos-api-rest
-    restart: always
-    env_file: .env
-    ports:
-      - ${API_PORT}:3000
-    volumes:
-      - storage-dir:/storage-dir
-    networks:
-      - funkos-network
-    depends_on:
-      - h2-db
-      - mongo-db
 
 networks:
   funkos-network:
