--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:h2:mem:default;DB_CLOSE_ON_EXIT=FALSE
+spring.datasource.url=jdbc:postgresql://${POSTGRES_HOST:localhost}:${POSTGRES_PORT:5432}/${POSTGRES_DATABASE:funkos}
 spring.datasource.username=${DATABASE_USER:sa}
 spring.datasource.password=${DATABASE_PASSWORD:root}
 spring.jpa.defer-datasource-initialization=false
@@ -8,10 +8,11 @@ spring.jpa.open-in-view=false
 # MONGO
 spring.data.mongodb.host=${MONGO_HOST:localhost}
 spring.data.mongodb.port=${MONGO_PORT:27017}
-spring.data.mongodb.database=${MONGO_DB:funkos}
+spring.data.mongodb.database=${MONGO_DATABASE:funkos}
 spring.data.mongodb.username=${DATABASE_USER:admin}
 spring.data.mongodb.password=${DATABASE_PASSWORD:admin1234}
 ## SWAGGER
 springdoc.swagger-ui.enabled=true
 ## ALMACENAMIENTO DE FICHEROS
 upload.delete=false
+spring.datasource.driver-class-name=org.postgresql.Driver
