--- a/.env
+++ b/.env
@@ -6,5 +6,5 @@ POSTGRES_PORT=5432
 POSTGRES_DATABASE=funkos
 MONGO_HOST=mongo-db
 MONGO_PORT=27017
-MONGO_DATABASE=funkos
+MONGO_DATABASE=pedidos
 PERFIL=prod
