--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -8,6 +8,6 @@ springdoc.swagger-ui.enabled=false
 # MONGO
 spring.data.mongodb.host=${MONGO_HOST:localhost}
 spring.data.mongodb.port=${MONGO_PORT:27017}
-spring.data.mongodb.database=${MONGO_DB:funkos}
+spring.data.mongodb.database=${MONGO_DATABASE:funkos}
 spring.data.mongodb.username=${DATABASE_USER:admin}
 spring.data.mongodb.password=${DATABASE_PASSWORD:admin1234}
