--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -34,5 +34,6 @@ server.ssl.key-alias=serverKeyPair
 server.ssl.enabled=true
 jwt.secret=1234567
 jwt.expiration=86400000
+##keytool -genkeypair -alias serverKeyPair -keyalg RSA -keysize 4096 -validity 365 -storetype PKCS12 -keystore server_keystore.p12 -storepass 1234567
 ## PERFIL ACTIVO
 spring.profiles.active=${PERFIL:dev}
